# Ai-tutor

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  USER_MANUAL.md  cliff.toml  pyproject.toml  requirements.txt  semgrep.yml
.specify/: constitution.md
.specify/templates/: feature_spec_template.md
backend/: requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  logging.py
backend/app/db/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: evaluation_engine.py  learning_engine.py  question_engine.py  report_engine.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatBox.tsx  ConceptSearch.tsx  ModuleQuiz.tsx
frontend/src/constants/: index.ts
frontend/src/hooks/: useTheme.ts  useTimer.ts
frontend/src/i18n/: index.ts
frontend/src/layouts/: Footer.tsx  MainLayout.tsx  Navbar.tsx
frontend/src/pages/: History.tsx  Interview.tsx  KnowledgeGaps.tsx  Landing.tsx  LearnChat.tsx  LearningChat.tsx  LearningDashboard.tsx  Login.tsx  ModuleViewer.tsx  NotFound.tsx  Profile.tsx  Results.tsx  Roadmap.tsx  Settings.tsx  Signup.tsx  TopicSelection.tsx
frontend/src/routes/: index.tsx
frontend/src/services/: aiService.ts  assessmentService.ts  chatService.ts  learningService.ts  mockData.ts
specs/: example_feature.md
tests/: test_placeholder.py
(+29 files in other folders)
