[project]
name = "ai-reverse-tutor"
version = "1.0.0"
description = "AI-powered learning assessment platform"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn==0.49.0",
    "sqlmodel==0.0.38",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "python-dotenv==1.2.2",
    "httpx==0.28.1",
    "SQLAlchemy==2.0.50",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
ignore_missing_imports = true

[tool.vulture]
exclude = ["venv/*"]
min_confidence = 80

[tool.bandit]
targets = ["backend/app"]
exclude_dirs = ["venv", "tests"]

[tool.pylint."MESSAGES CONTROL"]
disable = ["C0114", "C0115", "C0116"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
addopts = "--cov=backend/app --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
